MDEV-22369 Assertion `err == DB_SUCCESS' failed. in btr_block_get_func during crash recovery

- buf_page_get_gen() fails to set error value when it initializes the
page with redo logs.